--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     <link href="assets/mark.svg" rel="apple-touch-icon" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
+    <link href="/dist/input.css" rel="stylesheet" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
