commit-3: edit-vercel.json

--- a/src/index.html
+++ b/src/index.html
@@ -27,21 +27,6 @@
     ></script>
   </head>
   <body class="text-justify md:text-left font-poppins">
-    <script>
-      window.addEventListener("scroll", function () {
-        const navbar = document.getElementById("navbar");
-
-        // Jika scroll lebih dari 50px, tambahkan kelas bg-white
-        if (window.scrollY > 10) {
-          navbar.classList.add("bg-white", "shadow-lg");
-          navbar.classList.remove("bg-transparent");
-        } else {
-          navbar.classList.remove("bg-white", "shadow-lg");
-          navbar.classList.add("bg-transparent");
-        }
-      });
-    </script>
-
     <!-- Navbar -->
     <div x-data="{ open: false }" class="bg-white">
       <header
@@ -1561,5 +1546,6 @@
     </footer>
 
     <script src="//unpkg.com/alpinejs" defer></script>
+    <script type="module" src="./assets/js/index.js"></script>
   </body>
 </html>
